<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settings_dialog"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.gamecentre.tankbattle.tank.TankTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="26dp"
                android:text="@string/enable_sound_txt"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/enableSound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25sp"
                android:layout_marginBottom="25sp" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.gamecentre.tankbattle.tank.TankTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20sp"
                android:layout_marginBottom="26dp"
                android:text="@string/enable_vibration_txt"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/enableVibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25sp"
                android:layout_marginBottom="25sp" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_weight="1"
                android:text="@string/save_txt" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_marginLeft="50sp"
                android:layout_marginRight="50sp"
                android:layout_weight="1"
                android:text="@string/cancel_txt" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>