<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">



    <RelativeLayout
        android:id="@+id/settings_dialog"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_centerInParent="true"
        android:background="@drawable/bghud51">

        <androidx.cardview.widget.CardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bghud2" />

            <com.gamecentre.tankbattle.tank.TankTextView
                android:id="@+id/closeGameBuyBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="X"
                android:textColor="@color/white">

            </com.gamecentre.tankbattle.tank.TankTextView>

        </androidx.cardview.widget.CardView>

        <com.gamecentre.tankbattle.tank.TankTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:text="Get more games"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/settings_dialog2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    android:background="@drawable/retry_img">

                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:id="@+id/gameBuyCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="3"
                        android:textColor="@color/brick_brown"
                        android:textSize="35sp" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.8"
                        android:text="Time to next game"
                        android:layout_marginEnd="2dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/white"
                        android:textSize="9dp"/>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:background="@drawable/timeframe">


                        <com.gamecentre.tankbattle.tank.TankTextView
                            android:id="@+id/gameCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="30:00"
                            android:textColor="@color/white" />
                    </RelativeLayout>


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:layout_weight="1"
                    android:background="@drawable/btn3"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:id="@+id/videoGameBtn"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="Watch Ad"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:textStyle="italic|bold" />

                    <Button
                        android:id="@+id/videoGameBtn2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/play2" />

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="45dp"
                        android:background="@drawable/retry_img" />

                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/adGameAmnt"
                        android:textColor="@color/brick_brown"
                        android:textSize="15sp" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/btn3">


                    <LinearLayout
                        android:id="@+id/gameBuy3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/gameBuy32"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/gold_bar" />

                        <com.gamecentre.tankbattle.tank.TankTextView
                            android:id="@+id/gameBuy33"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game3_gold"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </LinearLayout>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="45dp"
                        android:background="@drawable/retry_img" />

                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/game15Amnt"
                        android:textColor="@color/brick_brown"
                        android:textSize="15sp" />
                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:background="@drawable/btn3">


                    <LinearLayout
                        android:id="@+id/gameBuy6"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/gameBuy62"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:background="@drawable/gold_bar" />

                        <com.gamecentre.tankbattle.tank.TankTextView
                            android:id="@+id/gameBuy63"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/game30Cost"
                            android:textColor="@color/white"
                            android:textSize="10sp" />

                    </LinearLayout>


                </LinearLayout>


                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="45dp"
                        android:layout_marginEnd="45dp"
                        android:background="@drawable/retry_img" />


                    <LinearLayout
                        android:layout_width="50dp"
                        android:layout_height="20dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:gravity="bottom"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/clock2"/>

                        <com.gamecentre.tankbattle.tank.TankTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/game30Time"
                            android:layout_weight="1"
                            android:textColor="@color/brick_brown"
                            android:textSize="10sp" />


                    </LinearLayout>


                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>