<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/settings_dialog"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/bghud51">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bghud2" />

                <com.gamecentre.tankbattle.tank.TankTextView
                    android:id="@+id/closeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="X"
                    android:textColor="@color/white">

                </com.gamecentre.tankbattle.tank.TankTextView>

            </androidx.cardview.widget.CardView>




            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/gold_stack2" />

                <com.gamecentre.tankbattle.tank.TankTextView
                    android:id="@+id/retryGoldCnt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="x100"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="8sp" />

            </LinearLayout>

            <com.gamecentre.tankbattle.tank.TankTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="15dp"
                android:text="CONTINUE?"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="70dp"
                    android:layout_marginEnd="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bonus_tank" />

                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/retryWatchAmnt"
                        android:textColor="@color/white"
                        android:textSize="8sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/bonus_tank" />

                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/retryGoldAmnt"
                        android:textColor="@color/white"
                        android:textSize="8sp" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.8">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="10sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@drawable/btn3">


                <com.gamecentre.tankbattle.tank.TankTextView
                    android:id="@+id/videoBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Earn Life"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="italic|bold" />

                <Button
                    android:id="@+id/videoBtn2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/play2"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="15sp"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@drawable/btn3">


                <com.gamecentre.tankbattle.tank.TankTextView
                    android:id="@+id/goldBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:text="Play On"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="italic|bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/goldBtn2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/gold_bar" />

                    <com.gamecentre.tankbattle.tank.TankTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/playOnGoldCost"
                        android:textColor="@color/white"
                        android:textSize="8sp" />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</RelativeLayout>